--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,17 @@ html, body {
     height: 100%;
 }
 
+input {
+    margin-right: 5px;
+}
+
 #webgl-canvas {
     display: block;
+    position: absolute;
+}
+
+#ui {
+    position: absolute;
+    left: 5px;
+    top: 5px;
 }
