Disable the long touch popup

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@ input {
     margin-top: 5px;
 }
 
+img {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+}
+
 #webgl-canvas {
     display: block;
     position: absolute;
